# morebuiltins

./: .gitignore  CHANGELOG.md  LICENSE  README.md  doc.md  doc.py  mkdocs.yml  publish.py  pyproject.toml  test.py
.github/workflows/: pythonpackage.yml
docs/: index.md  reference.md
morebuiltins/: __init__.py  _ipc.py  _time.py  _urllib.py  _util.py  _utils.py  date.py  download_python.py  emails.py  funcs.py  functools.py  ipc.py  logs.py  request.py  shared_memory.py  sqlite.py  time.py  tk.py  urllib.py  urllibs.py  util.py  utils.py
morebuiltins/cmd/: log_server.py  parse_deps.py  proxy_checker.py  ui.py
morebuiltins/cmd/systemd/: service.py  timer.py
morebuiltins/cmd_tools/: log_server.py
morebuiltins/download_python/: __init__.py  __main__.py  main.py
morebuiltins/snippets/: event.py  sql.py
morebuiltins/zipapps/: download_python.py  gui.py
