[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "morebuiltins"
authors = [{name = "ClericPy", email = "clericpy@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version"]
description = "Things which I thought should be set in builtins."
requires-python = ">=3.7"

[project.urls]
Home = "https://github.com/ClericPy/morebuiltins"
