[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "morebuiltins"
authors = [{name = "ClericPy", email = "clericpy@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version"]
description = "Expanding Python's built-in functionalities to enable richer and more versatile work scenarios."
requires-python = ">=3.8"

[project.urls]
Home = "https://github.com/ClericPy/morebuiltins"
